# minhook

./: CMakeLists.txt
src/: hook.c
